--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -299,6 +299,17 @@ nav {
   margin-left: -28px;
 }
 
+.hiring-announcement {
+  min-width: 100%;
+  height: 2em;
+  display: block;
+  background: $color-highlight;
+  color: $color-white;
+  padding-top: 0.3em;
+  padding-left: 0.3em;
+  font-weight: normal;
+}
+
 ////////////////////////////////////////////////
 //  footer
 
