Add accessibility link to footer

--- a/app/_includes/footer.html
+++ b/app/_includes/footer.html
@@ -23,4 +23,5 @@
 <div class="footer-copyright">
   <p>&copy;2019 The President and Fellows of Harvard University</p>
   <p>The content on this site is covered under a Creative Commons Attribution-ShareAlike 3.0 Unported license unless otherwise noted.</p>
+  <p><a href="https://accessibility.huit.harvard.edu/digital-accessibility-policy">Accessibility</a></p>
 </div>
