Remove spurious "and" and use serial comma

--- a/app/_includes/author.html
+++ b/app/_includes/author.html
@@ -2,9 +2,8 @@
   <p class="post-author">Posted by
   {% for author in include.author %}
     {% assign person_record = site.data.people[author] %}
-    {% assign penultimate = forloop.length | minus:1 %}
-    {% if forloop.last %} and {% endif %}
-    <a href="{{ site.baseurl }}/about/#{{person_record.name | slugify }}">{{ person_record.name }}</a>{% if forloop.last != true and forloop.index != penultimate %},{% endif %}
+    {% if forloop.last and forloop.length > 1 %} and {% endif %}
+    <a href="{{ site.baseurl }}/about/#{{person_record.name | slugify }}">{{ person_record.name }}</a>{% if forloop.last != true and forloop.length > 2 %},{% endif %}
   {% endfor %}
   </p>
 {% elsif include.guest-author %}
