--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -1,4 +1,9 @@
 {% if page.slug == "home" %}
+    <div class="hiring-announcement">
+      <a href="{{ site.baseurl }}/collaborate/">
+        We're hiring a program coordinator!
+      </a>
+    </div>
   <header id="header-splash">
     <div>
       <figure>
