Make homepage slogan more generative

--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -13,7 +13,7 @@
              alt="Library Innovation Lab"
              class="img-full-width">
       </figure>
-      <h1>{{ page.title }}</h1>
+      <h1 contenteditable="true">{{ page.title }}</h1>
     </div>
     {% include nav.html %}
   </header>
