Post web developer position

--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -1,7 +1,7 @@
 {% if page.slug == "home" %}
     <div class="hiring-announcement">
       <a href="{{ site.baseurl }}/collaborate/">
-        We're hiring a program coordinator!
+        We're hiring a web developer!
       </a>
     </div>
   <header id="header-splash">
