--- a/app/_includes/sharing-image.html
+++ b/app/_includes/sharing-image.html
@@ -19,7 +19,7 @@
 {% endcapture %}
 
 <meta name="twitter:card" content="{{ page.sharing-card-type }}">
-<meta name="twitter:site" content="@HarvardLIL">
+<meta name="twitter:site" content="@{{ site.twitter_account_name }}">
 <meta name="twitter:image" content="{{ site.baseurl }}/assets/{{ sharing-image | strip }}">
 
 <meta property="og:type" content="website">
