Twitter won't render cards if you omit twitter:title (preview services are wrong)

--- a/app/_includes/title.html
+++ b/app/_includes/title.html
@@ -1,5 +1,7 @@
 {% capture title %}
-  {% if page.title-tag %}
+  {% if page.title-tag-complete %}
+    {{ page.title-tag-complete }}
+  {% elsif page.title-tag %}
     {{ page.title-tag | append: " | Library Innovation Lab" }}
   {% elsif page.title %}
     {{ page.title | append: " | Library Innovation Lab" }}
