Update hiring banner

--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -1,7 +1,7 @@
 {% if page.slug == "home" %}
     <div class="hiring-announcement">
       <a href="{{ site.baseurl }}/collaborate/">
-        We're hiring a web developer!
+        Check our open positions: we're looking for Web Developers and a Technologist in Residence.
       </a>
     </div>
   <header id="header-splash">
