Move collaborate -> jobs

--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -1,6 +1,6 @@
 {% if page.slug == "home" %}
     <div class="hiring-announcement">
-      <a href="{{ site.baseurl }}/collaborate/">
+      <a href="{{ site.baseurl }}/jobs/">
         Check our open positions: we're looking for Web Developers and a Technologist in Residence.
       </a>
     </div>
