--- a/app/_includes/nav.html
+++ b/app/_includes/nav.html
@@ -10,7 +10,7 @@
         <a href="{{ site.baseurl }}/about/">About</a>
     </li>
     <li>
-        <a href="{{ site.baseurl }}/collaborate/">Collaborate</a>
+        <a href="{{ site.baseurl }}/jobs/">Jobs</a>
     </li>
     <li>
         <a href="{{ site.baseurl }}/projects/">Projects</a>
