Add jobs to footer.

--- a/app/_includes/footer.html
+++ b/app/_includes/footer.html
@@ -16,6 +16,7 @@
 <ul>
   <li><a href="{{ site.baseurl }}/">Home</a></li>
   <li><a href="{{ site.baseurl }}/about/">About</a></li>
+  <li><a href="{{ site.baseurl }}/jobs/">Jobs</a></li>
   <li><a href="{{ site.baseurl }}/projects/">Projects</a></li>
   <li><a href="{{ site.baseurl }}/sketches/">Sketches</a></li>
   <li><a href="{{ site.baseurl }}/blog/">Blog</a></li>
