--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -1,7 +1,7 @@
 {% if page.slug == "home" %}
     <div class="hiring-announcement">
       <a href="{{ site.baseurl }}/jobs/">
-         We're hiring software developers and summer RAs!
+         We're hiring summer RAs!
       </a>
     </div>
   <header id="header-splash">
