--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -8,7 +8,7 @@
              alt="Library Innovation Lab"
              class="img-full-width">
       </figure>
-      <h1 contenteditable="true">{{ page.title }}</h1>
+      <h1 contenteditable="true">{{ page.title | smartify }}</h1>
     </div>
     {% include nav.html %}
   </header>
