--- a/app/_includes/tags.html
+++ b/app/_includes/tags.html
@@ -1,4 +1,4 @@
-{% if include.tags or include.categories %}
+{% unless include.tags == empty and include.categories == empty %}
 <footer>
   {% for tag in include.tags %}
     <span class="tag"><a href="{{ site.baseurl }}/blog/tag/{{ tag | slugify }}">{{ tag }}</a></span>
@@ -7,4 +7,4 @@
     <span class="category"><a href="{{ site.baseurl }}/blog/category/{{ category | slugify }}">{{ category }}</a></span>
   {% endfor %}
 </footer> <!-- end article footer -->
-{% endif %}
+{% endunless %}
