Added newsletter link to footer

--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -322,7 +322,7 @@ body > footer {
   overflow: auto;
 
   ul {
-    width: 50%;
+    //width: 50%;
     float: right;
     list-style-type: none;
     margin-bottom: 0;
