--- a/app/_includes/footer.html
+++ b/app/_includes/footer.html
@@ -20,6 +20,7 @@
   <li><a href="{{ site.baseurl }}/projects/">Projects</a></li>
   <li><a href="{{ site.baseurl }}/sketches/">Sketches</a></li>
   <li><a href="{{ site.baseurl }}/blog/">Blog</a></li>
+  <li><a href="https://ocb.to/lawvocado">Newsletter</a></li>
 </ul>
 <div class="footer-copyright">
   <p>&copy;2022 The President and Fellows of Harvard University</p>
