New job listings

--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -1521,6 +1521,11 @@ section.people-unaffiliated .list {
   }
 }
 
+//jobs page
+.slice-body h3 {
+  @include overline($color-black, $grid * 6, $b-margin:$grid);
+}
+
 // the fellows-2016 video
 .fellows-2016 .embed-container {
   margin-top: 32px;
