--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -1,4 +1,10 @@
 {% if page.slug == "home" %}
+    <div class="hiring-announcement">
+      <a href="{{ site.baseurl }}/jobs/">
+        We're hiring!
+        We're looking for a Product and Research Director, an Engineering Manager, a Senior UX Designer/Researcher, and a Support Coordinator.
+      </a>
+    </div>
   <header id="header-splash">
     <div>
       <figure>
