--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -301,12 +301,13 @@ nav {
 
 .hiring-announcement {
   min-width: 100%;
-  height: 2em;
+  height: 100%;
   display: block;
   background: $color-highlight;
   color: $color-white;
-  padding-top: 0.3em;
-  padding-left: 0.3em;
+  padding-top: .5em;
+  padding-bottom: .5em;
+  padding-left: .5em;
   font-weight: normal;
 }
 
