RSS auto-discovery
This adds a <link> element for RSS auto-discovery. I was subscribing to
your site in an app that discovers the RSS URL and it couldn't find it
automatically :)

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -11,6 +11,7 @@
     <link rel="shortcut icon" type="image/png" href="{{ site.baseurl }}/assets/images/favicon.png">
     <link rel="apple-touch-icon" href="{{ site.baseurl }}/assets/images/apple-touch-icon.png">
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css?cache-buster=11">
+    <link rel="alternate" href="{{ site.baseurl }}/blog/feed/" type="application/rss+xml" title="RSS Feed">
     {% include custom-css.html %}
   </head>
   {{ content }}
