--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -2,7 +2,7 @@
     <div class="hiring-announcement">
       <a href="{{ site.baseurl }}/jobs/">
         We're hiring!
-        We're looking for two Senior Software Engineers.
+        We're looking for a Senior Software Engineer.
       </a>
     </div>
   <header id="header-splash">
