Add a banner to the ai summit page.

--- a/app/_scss/variables-mixins-placeholders.scss
+++ b/app/_scss/variables-mixins-placeholders.scss
@@ -28,6 +28,7 @@ $size-3xlarge: 72px;
 $size-2xlarge: 48px;
 $size-xlarge: 40px;
 $size-large: 24px;
+$size-medium: 20px;
 $size-xbody: 1.222222rem;
 $size-body: 17px;
 $size-small: 12px;
