--- a/app/_includes/header-splash-logo.html
+++ b/app/_includes/header-splash-logo.html
@@ -1,5 +1,5 @@
 <h1 class="sr-only">Library Innovation Lab</h1>
-<svg class="header-splash__logo" viewBox="0 0 414 205" fill="black" xmlns="http://www.w3.org/2000/svg">
+<svg class="header-splash__logo" viewBox="0 0 414 205" fill="#121212" xmlns="http://www.w3.org/2000/svg">
     <path d="M0 29.2857H116.863V205L146.079 175.714V0H29.2157L0 29.2857Z" />
     <path d="M58.4315 58.5714H29.2157V175.714H87.6472V146.429H58.4315V58.5714Z" />
     <path d="M200.946 60.9664H183.066V29.2857H175.353V67.4157H200.946V60.9664Z" />
