--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -7,7 +7,7 @@
     </div>
   <header class="header-splash">
     <div>
-      {% include logo.html %}
+      {% include header-splash-logo.html %}
       <h1 contenteditable="true">{{ page.title | smartify }}</h1>
     </div>
     {% include nav.html %}
