--- a/app/assets/css/blog.scss
+++ b/app/assets/css/blog.scss
@@ -9,6 +9,10 @@
 ////////////////////////////////////////////////
 //  blog
 
+.posts-filter {
+  margin-bottom: $double * 2 !important;
+  text-align: left;
+}
 
 .posts-index {
   article {
@@ -21,7 +25,7 @@
     border-bottom: none;
   }
 
-  .sleeve:first-of-type article {
+  .sleeve:nth-of-type(2) article {
     border-top: none;
     margin-top: 0;
   }
@@ -234,7 +238,7 @@
 }
 
 @include respond(4) {
-  article, .pagination {
+  article, .pagination, .posts-filter {
     max-width: 596px;
     margin: auto;
     margin-top: 16px;
@@ -268,6 +272,20 @@ footer {
     color: $color-white;
     background-color: $color-electricblue;
   }
+}
+
+.tag[aria-current='true'] {
+    color: $color-white;
+    background-color: $color-electricblue;
+    a {
+      border-bottom: none;
+    }
+
+    &:hover, &:focus,
+    a:hover, a:focus {
+      color: $color-white;
+      background-color: $color-highlight;
+    }
 }
 
 figure.highlight pre {
