--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -8,8 +8,10 @@
     {% include description.html %}
     {% include sharing-image.html %}
     <link rel="canonical" href="{{ site.url }}{{ site.baseurl }}{{ page.url | replace:'index.html',''}}">
-    <link rel="shortcut icon" type="image/png" href="{{ site.baseurl }}/assets/images/favicon.png">
-    <link rel="apple-touch-icon" href="{{ site.baseurl }}/assets/images/apple-touch-icon.png">
+    <link rel="icon" href="{{ site.baseurl }}/assets/images/favicon.ico" sizes="32x32">
+    <link rel="icon" href="{{ site.baseurl }}/assets/images/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="{{ site.baseurl }}/assets/images/apple-touch-favicon.png">
+    <link rel="manifest" href="/manifest.webmanifest">
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css?cache-buster=17">
     <link rel="alternate" href="{{ site.baseurl }}/blog/feed/" type="application/rss+xml" title="RSS Feed">
     {% include custom-css.html %}
