--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="{{ site.baseurl }}/assets/images/favicon.ico" sizes="32x32">
     <link rel="icon" href="{{ site.baseurl }}/assets/images/favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="{{ site.baseurl }}/assets/images/apple-touch-favicon.png">
-    <link rel="manifest" href="/manifest.webmanifest">
+    <link rel="manifest" href="{{ site.baseurl }}/manifest.webmanifest">
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css?cache-buster=17">
     <link rel="alternate" href="{{ site.baseurl }}/blog/feed/" type="application/rss+xml" title="RSS Feed">
     {% include custom-css.html %}
