Add CSS for left-aligning, in case folks want it, commented out.

--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -1387,6 +1387,11 @@ a.link-project {
   }
 }
 
+// home page's "about" gallery
+// .home .about .logline {
+//   text-align: left;
+// }
+
 // about page, LIL contact info tweaks
 #about-specs, #about-address {
   clear: both;
