--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -1375,9 +1375,9 @@ a.link-project {
 }
 
 // home page's "about" gallery
-// .home .about .logline {
-//   text-align: left;
-// }
+.home .about .logline {
+  text-align: left;
+}
 
 // about page, LIL contact info tweaks
 #about-specs, #about-address {
