--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -78,6 +78,13 @@
 
 @font-face {
   font-family: "NeueHaasGrotesk";
+  src: url('../fonts/NeueHaasGroteskDisplayPro56Italic.woff2') format('woff2'), url('..fonts/NeueHaasGroteskDisplayPro56Italic.woff') format('woff');
+  font-weight: 500;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "NeueHaasGrotesk";
   src: url('../fonts/NeueHaasGroteskDisplayPro65Medium.woff2') format('woff2'), url('..fonts/NeueHaasGroteskDisplayPro65Medium.woff') format('woff');
   font-weight: 600;
   font-style: normal;
@@ -132,10 +139,6 @@ body {
   background-color: white;
   width: 100%;
   position: relative;
-}
-
-em {
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 // allow us to override some of the arcane things above
