Break up long tagline.

--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -8,7 +8,7 @@
   <header class="header-splash">
     <div>
       {% include header-splash-logo.html %}
-      <h1 contenteditable="true">{{ page.title | smartify }}</h1>
+      <h1 contenteditable="true"><span>Growing knowledge and community</span><span>by bringing library principles</span><span>to technological frontiers.</span></h1>
     </div>
     {% include nav.html %}
   </header>
