Constrain width of header splash description

--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -8,7 +8,7 @@
   <header class="header-splash">
     <div>
       {% include header-splash-logo.html %}
-      <h1 contenteditable="true">{{ page.title | smartify }}</h1>
+      <h1 class="header-splash__description" contenteditable="true">{{ page.title | smartify }}</h1>
     </div>
     {% include nav.html %}
   </header>
