Swap out placeholder featured tags.

--- a/app/_includes/tag-filter.html
+++ b/app/_includes/tag-filter.html
@@ -7,7 +7,7 @@
     <ul>
       <li>
         <a class="tag" href="{{ site.baseurl }}/blog/"{% if current == "all" %} aria-current="true"{% endif %}>
-          all
+          All
         </a>
       </li>
       {% for tag in site.data.featured_tags %}
