--- a/app/_includes/nav.html
+++ b/app/_includes/nav.html
@@ -1,8 +1,8 @@
 <nav aria-label="main">
   <ul>
     <li>
-      <a href="{{ site.baseurl }}/" class="nav__logo">
-        <svg aria-hidden="true" width="18" height="24" viewBox="0 0 18 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+      <a href="{{ site.baseurl }}/">
+        <svg class="header-nav-logo" aria-hidden="true" width="18" height="24" viewBox="0 0 18 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
           <path d="M0 3.42857H13.7143V24L17.1429 20.5714V0H3.42857L0 3.42857Z"/>
           <path d="M6.85714 6.85714H3.42857V20.5714H10.2857V17.1429H6.85714V6.85714Z"/>
         </svg>
