--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -917,7 +917,7 @@ a.gallery-item {
     max-width: nth($respond-breakpoints,4) + (6 * $double);
     border-top: none;
     margin-top: 0;
-    padding: 0;
+    padding: 0 $grid;
 
     figure {
       float: none;
